# SQLiteDAV

./: .gitignore  LICENSE  README.md  SQLiteDAV.cabal  build  package.yaml  stack.yaml  webdavServer.cabal
.github/workflows/: ci.yaml
app/: Main.hs
src/Network/WebDav/: API.hs  Constants.hs  HTTPExtensions.hs  Properties.hs  Server.hs
src/SQLiteDAV/: API.hs  Constants.hs  HTTPExtensions.hs  Properties.hs  Server.hs  Utils.hs
test/: Spec.hs  data.sqlite
