name:                webdavServer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jamshidh/webdavServer#readme
license:             BSD3
license-file:        LICENSE
author:              Jamshid
copyright:           2017 Jamshid
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.WebDav.Constants
                       Network.WebDav.HTTPExtensions
                       Network.WebDav.Properties
  build-depends:       base >= 4.7 && < 5
                     , datetime
                     , directory
                     , filepath
                     , servant-foreign
                     , servant-server
                     , time
                     , unix
                     , xml
  default-language:    Haskell2010

executable webdavServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , datetime
                     , directory
                     , filepath
                     , http-types
                     , servant
                     , servant-foreign
                     , servant-options
                     , servant-server
                     , time
                     , wai-extra
                     , warp
                     , webdavServer
                     , xml
  default-language:    Haskell2010

test-suite webdavServer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , webdavServer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jamshid/webdavServer
